@@ -17,6 +17,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #10667: Fast path for collections.Counter().
+
 - Issue #10695: passing the port as a string value to telnetlib no longer
   causes debug mode to fail.
 
